apps/photoprism/base/photoprism-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoprism
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:latest
          ports:
            - containerPort: 2342
          volumeMounts:
            - name: photos
              mountPath: /photoprism/originals
            - name: storage
              mountPath: /photoprism/storage
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: photoprism-photos
        - name: storage
          persistentVolumeClaim:
            claimName: photoprism-storage
