apps/photoprism/base/photoprism-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
  namespace: photoprism
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: photos.elladali.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoprism
                port:
                  number: 2342
